Re-use the auto suggestion box and make sure it's not overlapped

--- a/data/autosuggestcontrol.css
+++ b/data/autosuggestcontrol.css
@@ -5,6 +5,7 @@ div.suggestions {
     text-align: left;
     background-color: #ffffff;
     position: absolute;
+    z-index: 999;
 }
 div.suggestions div {
     cursor: default;
